// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MsgLocalizationForm inits inits with initial values 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="send_msg"
  tabs={
    Array [
      Object {
        "body": <React.Fragment>
          <MultiChoiceInput
            helpText={
              <Trans
                i18nKey="forms.send_msg.localized_quick_replies"
                values={
                  Object {
                    "language": "Spanish",
                  }
                }
              >
                Add a new [[language]] Quick Reply and press enter.
              </Trans>
            }
            items={
              Object {
                "value": Array [],
              }
            }
            name="Quick Reply"
            onFieldErrors={[Function]}
            onItemAdded={[Function]}
            onRemoved={[Function]}
          />
        </React.Fragment>,
        "checked": false,
        "name": "Quick Replies",
      },
    ]
  }
  title="Send Message"
>
  <div
    data-spec="translation-container"
  >
    <div
      className="translate_from"
      data-spec="text-to-translate"
    >
      Hey!
    </div>
  </div>
  <Connect(TextInputElement)
    autocomplete={true}
    entry={
      Object {
        "value": "¡hola!",
      }
    }
    focus={true}
    name="Message"
    onChange={[Function]}
    onFieldFailures={[Function]}
    placeholder="Spanish Translation"
    showLabel={false}
    textarea={true}
  />
</Dialog>
`;

exports[`MsgLocalizationForm render should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="send_msg"
  tabs={
    Array [
      Object {
        "body": <React.Fragment>
          <MultiChoiceInput
            helpText={
              <Trans
                i18nKey="forms.send_msg.localized_quick_replies"
                values={
                  Object {
                    "language": "Spanish",
                  }
                }
              >
                Add a new [[language]] Quick Reply and press enter.
              </Trans>
            }
            items={
              Object {
                "value": Array [],
              }
            }
            name="Quick Reply"
            onFieldErrors={[Function]}
            onItemAdded={[Function]}
            onRemoved={[Function]}
          />
        </React.Fragment>,
        "checked": false,
        "name": "Quick Replies",
      },
    ]
  }
  title="Send Message"
>
  <div
    data-spec="translation-container"
  >
    <div
      className="translate_from"
      data-spec="text-to-translate"
    >
      Hey!
    </div>
  </div>
  <Connect(TextInputElement)
    autocomplete={true}
    entry={
      Object {
        "value": "",
      }
    }
    focus={true}
    name="Message"
    onChange={[Function]}
    onFieldFailures={[Function]}
    placeholder="Spanish Translation"
    showLabel={false}
    textarea={true}
  />
</Dialog>
`;

exports[`MsgLocalizationForm updates should ignore empty quick replies 1`] = `
Object {
  "audio": Object {
    "value": null,
  },
  "message": Object {
    "value": "",
  },
  "quickReplies": Object {
    "validationFailures": Array [],
    "value": Array [],
  },
  "valid": true,
}
`;

exports[`MsgLocalizationForm updates should ignore empty quick replies 2`] = `
Array [
  "spa",
  Array [
    Object {
      "translations": Object {},
      "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
    },
  ],
]
`;

exports[`MsgLocalizationForm updates should save changes 1`] = `
Object {
  "audio": Object {
    "value": null,
  },
  "message": Object {
    "validationFailures": Array [],
    "value": "What is your favorite color?",
  },
  "quickReplies": Object {
    "validationFailures": Array [],
    "value": Array [
      "red",
      "green",
      "blue",
    ],
  },
  "valid": true,
}
`;

exports[`MsgLocalizationForm updates should save changes 2`] = `
Array [
  "spa",
  Array [
    Object {
      "translations": Object {
        "quick_replies": Array [
          "red",
          "green",
          "blue",
        ],
        "text": "What is your favorite color?",
      },
      "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
    },
  ],
]
`;
